add website content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,203 @@
-Coming Soon
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Artist Page for Holli">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Holli</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.jpg">
+    <link rel="stylesheet" href="index.css"/>
+    <script src="index.js"></script>
+</head>
+<body>
+    <button id="mobile-navbar-menu-button" aria-label="Menu" onclick="mobileClick()">
+        <svg height="20" width="20">
+            <rect x="0" y="3" width="20" height="3" />
+            <rect x="0" y="8.666666666666668" width="20" height="3" />
+            <rect x="0" y="14.333333333333334" width="20" height="3" />
+        </svg>
+    </button>
+    <nav class="hidden" id="navbar">
+        <a href="#bio" onclick="mobileClick()">Über Holli</a>
+        <a href="#releases" onclick="mobileClick()">Releases</a>
+        <a href="#video" onclick="mobileClick()">Videos</a>
+        <a href="#presskit" onclick="mobileClick()">Pressekit</a>
+        <a href="#contact" onclick="mobileClick()">Kontakt</a>
+    </nav>
+    <main>
+        <section>
+            <div class="header-container">
+                <div>
+                    <!-- <picture>
+                        <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
+                        <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
+                        <img src="https://via.placeholder.com/949x316?text=_" alt="picture of Holli">
+                    </picture> -->
+                    <img src="Tobias_Paal_Holli-01-24-2022 10.jpg">
+                </div>
+                <div>
+                    <h1>Holli</h1>
+                </div>
+            </div>
+            <!-- <img style="width: 100%" src="Tobias_Paal_Holli-01-24-2022 8.jpg"> -->
+            <!-- <div id="separator-symbol">•</div> -->
+        </section>
+        <section id="bio">
+            <p>
+                Wenn Holli <q>Ich bin auch nicht wirklich bekannt dafür,
+                nicht awkward zu sein</q> (Gin mit Leitung) singt,
+                dann tut er sich eigentlich unrecht.
+                Holli, der mit bürgerlichem Namen Tobias heißt,
+                in seiner Zivildienstzeit in einem Seniorenheim
+                aber aufgrund seines vermeintlich holländischen Aussehens
+                den Spitznamen Holli verpasst bekam, ist nicht wirklich awkward.
+                Er hat bloß keine Angst vor der emotionalen Blöße,
+                singt über sich selbst, über Dinge, Probleme, Zustände,
+                die andere vielleicht lieber mit ironischer Distanz kaschieren.
+            </p>
+            <div id="separator-symbol">•</div>
+            <p>
+                Der gebürtige Linzer schreibt frisch von der Seele, spart mit Metaphern,
+                ist sich aber nicht zu cool für ein bisschen Pathos.
+                Wenn er also Ich weiß, dass die Liebe siegen wird (Die Liebe wird siegen) singt,
+                dann meint er das auch so. Das erleichtert, worum es Holli eigentlich geht:
+                sich vom Publikum verstanden fühlen und umgekehrt.
+                Dabei ist er nicht alleine, hat eine Band um sich geschart:
+                Michael Furtlehner (Schlagzeug), Thorsten Kaiser (Bass),
+                Michael Reitinger (E-Gitarre), Mara Lutz (Violine),
+                Dorian Windegger (Keys) und dazu je nach Song diverse Gastmusiker*innen.
+                Das klingt dann ein bisschen wie wenn Element of Crime auf Phoebe Bridges treffen
+                mit etwas Bon Iver in den folkigeren Momenten.
+                Hollis Stimme spielt dabei die ganze Palette emotionaler Befindlichkeiten
+                ohne Rücksicht auf sich selbst, nicht awkward, sondern mutig.
+            </p>
+        </section>
+
+        <section id="releases">
+            <div class="h2-container">
+                <h2>Releases</h2>
+                <div></div>
+            </div>
+            <div class="spotify">
+                <iframe style="height: 300px" src="https://open.spotify.com/embed/artist/0mWMTIEvUdaNLWqfXg4Q7E?utm_source=generator&theme=0" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </section>
+        <section id="video">
+            <div class="h2-container">
+                <h2>Videos</h2>
+                <div></div>
+            </div>
+            <div class="video">
+                <iframe  src="https://www.youtube.com/embed/RMkSMlqKeIM" title="Holli - Live Session" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/GaxrC9EHgYI" title="Holli - Die Liebe wird siegen / Morgen wird der Schmerz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/HzAeLVxKQsY" title="Holli - Leopoldstadt" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/CQln5bgKRHM" title="Holli - Immer mehr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <section id="presskit">
+            <div class="h2-container">
+                <h2>Pressekit</h2>
+                <div></div>
+            </div>
+            <p style="text-align: left;">
+                Coming Soon.
+            </p>
+        </section>
+
+        <section id="contact">
+            <div class="h2-container">
+                <h2>Kontact</h2>
+                <div></div>
+            </div>
+            <p style="text-align: left;">
+                Für Booking, wenden Sie sich an <a href="mailto:holli.booking@gmail.com">holli.booking@gmail.com</a>.
+                Für andere Anliegen an <a href="contactholli@gmail.com">contactholli@gmail.com</a>.
+            </p>
+        </section>
+
+    </main>
+
+    <footer>
+        <div>
+            <svg width="33" height="33" role="img" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.facebook.com/hollimusik" class="social-media-link" target="_blank"
+                    rel="noreferrer">
+                    <svg viewBox="0 0 85 85">
+                        <title>Facebook</title>
+                        <desc>The F icon for Facebook inside a circle</desc>
+                        <g>
+                            <circle cx="42.5" cy="42.5" r="42.5" class="icon-circle"></circle>
+                            <path fill="white" d="M63.18,19.26H21.82a2.56,2.56,0,0,0-2.56,2.56V63.18a2.56,2.56,0,0,0,2.56,2.56H44.09v-18H38v-7h6.06V35.55c0-6,3.66-9.27,9-9.27a48.14,48.14,0,0,1,5.41.28v6.27H54.81c-2.92,0-3.48,1.39-3.48,3.42v4.48h7l-.91,7h-6v18H63.18a2.56,2.56,0,0,0,2.56-2.56V21.82A2.56,2.56,0,0,0,63.18,19.26Z"></path>
+                        </g>
+                    </svg>
+                </a>
+            </svg>
+        </div>
+        <div>
+            <svg width="33" height="33" role="img" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.instagram.com/echter_holli/" class="social-media-link" target="_blank" rel="noreferrer">
+                    <svg viewBox="0 0 85 85">
+                        <title>Instagram</title>
+                        <desc>The camera icon for Instagram inside a circle</desc>
+                        <g>
+                            <circle cx="42.5" cy="42.5" r="42.5" class="icon-circle"></circle>
+                            <path fill="white" d="M42.5,23c6.35,0,7.11,0,9.62.14a12.93,12.93,0,0,1,4.42.82,7.91,7.91,0,0,1,4.51,4.51,12.93,12.93,0,0,1,.82,4.42c.12,2.51.14,3.27.14,9.62s0,7.11-.14,9.62a12.93,12.93,0,0,1-.82,4.42,7.91,7.91,0,0,1-4.51,4.51,12.93,12.93,0,0,1-4.42.82c-2.51.12-3.26.14-9.62.14s-7.11,0-9.62-.14a12.93,12.93,0,0,1-4.42-.82A7.91,7.91,0,0,1,24,56.54a12.93,12.93,0,0,1-.82-4.42C23,49.61,23,48.85,23,42.5s0-7.11.14-9.62A12.93,12.93,0,0,1,24,28.46,7.91,7.91,0,0,1,28.46,24a12.93,12.93,0,0,1,4.42-.82C35.39,23,36.15,23,42.5,23m0-4.29c-6.46,0-7.27,0-9.81.14A17.49,17.49,0,0,0,26.91,20a12.1,12.1,0,0,0-7,7,17.49,17.49,0,0,0-1.11,5.78c-.11,2.54-.14,3.35-.14,9.81s0,7.27.14,9.81A17.49,17.49,0,0,0,20,58.09a12.1,12.1,0,0,0,7,7,17.49,17.49,0,0,0,5.78,1.11c2.54.11,3.35.14,9.81.14s7.27,0,9.81-.14a17.49,17.49,0,0,0,5.78-1.11,12.1,12.1,0,0,0,7-7,17.49,17.49,0,0,0,1.11-5.78c.11-2.54.14-3.35.14-9.81s0-7.27-.14-9.81a17.49,17.49,0,0,0-1.11-5.78,12.1,12.1,0,0,0-7-7,17.49,17.49,0,0,0-5.78-1.11c-2.54-.11-3.35-.14-9.81-.14Z"></path>
+                            <path fill="white" d="M42.5,30.28A12.22,12.22,0,1,0,54.72,42.5,12.22,12.22,0,0,0,42.5,30.28Zm0,20.15a7.93,7.93,0,1,1,7.93-7.93A7.93,7.93,0,0,1,42.5,50.43Z"></path>
+                            <circle fill="white" cx="55.2" cy="29.8" r="2.86"></circle>
+                        </g>
+                    </svg>
+                </a>
+            </svg>
+        </div>
+        <div>
+            <svg width="33" height="33" role="img" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.youtube.com/channel/UCOY1otpfVja-mwN6EZqqzsg" class="social-media-link" target="_blank" rel="noreferrer">
+                    <svg viewBox="0 0 85 85">
+                        <title>YouTube</title>
+                        <desc>The play button icon for YouTube inside a circle</desc>
+                        <g>
+                            <circle cx="42.5" cy="42.5" r="42.5" class="icon-circle"></circle>
+                            <path fill="white" d="M66.3,52a6.82,6.82,0,0,1-6.8,6.8h-34A6.82,6.82,0,0,1,18.7,52V33a6.82,6.82,0,0,1,6.8-6.8h34A6.82,6.82,0,0,1,66.3,33ZM37.58,48.34l12.87-6.66L37.58,35Z"></path>
+                        </g>
+                    </svg>
+                </a>
+            </svg>
+        </div>
+        <div>
+            <svg width="33" height="33" role="img" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://open.spotify.com/artist/0mWMTIEvUdaNLWqfXg4Q7E?si=djM3zXKMT0uqJhAkM7vKSg" class="social-media-link" target="_blank" rel="noreferrer">
+                    <svg viewBox="0 0 168 168">
+                        <title>Spotify</title>
+                        <desc>Spotify's logo inside a circle</desc>
+                        <g>
+                            <circle cx="84" cy="84" r="84" class="icon-circle"></circle>
+                            <path fill="white" d="m120.404 120.78c-1.5 2.46-4.72 3.24-7.18 1.73-19.662-12.01-44.414-14.73-73.564-8.07-2.809 0.64-5.609-1.12-6.249-3.93-0.643-2.81 1.11-5.61 3.926-6.25 31.9-7.291 59.263-4.15 81.337 9.34 2.46 1.51 3.24 4.72 1.73 7.18zm10.25-22.805c-1.89 3.075-5.91 4.045-8.98 2.155-22.51-13.839-56.823-17.846-83.448-9.764-3.453 1.043-7.1-0.903-8.148-4.35-1.04-3.453 0.907-7.093 4.354-8.143 30.413-9.228 68.222-4.758 94.072 11.127 3.07 1.89 4.04 5.91 2.15 8.976v-0.001zm0.88-23.744c-26.99-16.031-71.52-17.505-97.289-9.684-4.138 1.255-8.514-1.081-9.768-5.219-1.254-4.14 1.08-8.513 5.221-9.771 29.581-8.98 78.756-7.245 109.83 11.202 3.73 2.209 4.95 7.016 2.74 10.733-2.2 3.722-7.02 4.949-10.73 2.739z"></path>
+                        </g>
+                    </svg>
+                </a>
+            </svg>
+        </div>
+        <div>
+            <svg width="33" height="33" role="img" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.tiktok.com/@echter_holli" class="social-media-link" target="_blank" rel="noreferrer">
+                    <svg viewBox="0 0 672 672">
+                        <title>TikTok</title>
+                        <desc>TikTok's logo inside a circle</desc>
+                        <g>
+                            <circle cx="336" cy="336" r="336" class="icon-circle"></circle>
+                            <path transform="translate(90 70)" fill="white" d="M412.19,118.66a109.27,109.27,0,0,1-9.45-5.5,132.87,132.87,0,0,1-24.27-20.62c-18.1-20.71-24.86-41.72-27.35-56.43h.1C349.14,23.9,350,16,350.13,16H267.69V334.78c0,4.28,0,8.51-.18,12.69,0,.52-.05,1-.08,1.56,0,.23,0,.47-.05.71,0,.06,0,.12,0,.18a70,70,0,0,1-35.22,55.56,68.8,68.8,0,0,1-34.11,9c-38.41,0-69.54-31.32-69.54-70s31.13-70,69.54-70a68.9,68.9,0,0,1,21.41,3.39l.1-83.94a153.14,153.14,0,0,0-118,34.52,161.79,161.79,0,0,0-35.3,43.53c-3.48,6-16.61,30.11-18.2,69.24-1,22.21,5.67,45.22,8.85,54.73v.2c2,5.6,9.75,24.71,22.38,40.82A167.53,167.53,0,0,0,115,470.66v-.2l.2.2C155.11,497.78,199.36,496,199.36,496c7.66-.31,33.32,0,62.46-13.81,32.32-15.31,50.72-38.12,50.72-38.12a158.46,158.46,0,0,0,27.64-45.93c7.46-19.61,9.95-43.13,9.95-52.53V176.49c1,.6,14.32,9.41,14.32,9.41s19.19,12.3,49.13,20.31c21.48,5.7,50.42,6.9,50.42,6.9V131.27C453.86,132.37,433.27,129.17,412.19,118.66Z"/>
+                        </g>
+                    </svg>
+                </a>
+            </svg>
+        </div>
+    </footer>
+</body>
+</html>
