--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
                         <img src="https://via.placeholder.com/949x316?text=_" alt="picture of Holli">
                     </picture> -->
-                    <img src="Tobias_Paal_Holli-01-24-2022 10.jpg">
+                    <img src="Tobias_Paal_Holli-01-24-2022 10.jpg" alt="Bild von Holli">
                 </div>
                 <div>
                     <h1>Holli</h1>
@@ -59,14 +59,14 @@
             <p>
                 Der gebürtige Linzer schreibt frisch von der Seele, spart mit Metaphern,
                 ist sich aber nicht zu cool für ein bisschen Pathos.
-                Wenn er also Ich weiß, dass die Liebe siegen wird (Die Liebe wird siegen) singt,
+                Wenn er also <q>Ich weiß, dass die Liebe siegen wird</q> (Die Liebe wird siegen) singt,
                 dann meint er das auch so. Das erleichtert, worum es Holli eigentlich geht:
                 sich vom Publikum verstanden fühlen und umgekehrt.
                 Dabei ist er nicht alleine, hat eine Band um sich geschart:
                 Michael Furtlehner (Schlagzeug), Thorsten Kaiser (Bass),
                 Michael Reitinger (E-Gitarre), Mara Lutz (Violine),
                 Dorian Windegger (Keys) und dazu je nach Song diverse Gastmusiker*innen.
-                Das klingt dann ein bisschen wie wenn Element of Crime auf Phoebe Bridges treffen
+                Das klingt dann ein bisschen wie wenn Element of Crime auf Phoebe Bridgers treffen
                 mit etwas Bon Iver in den folkigeren Momenten.
                 Hollis Stimme spielt dabei die ganze Palette emotionaler Befindlichkeiten
                 ohne Rücksicht auf sich selbst, nicht awkward, sondern mutig.
