--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <section id="contact">
             <div class="h2-container">
-                <h2>Kontact</h2>
+                <h2>Kontakt</h2>
                 <div></div>
             </div>
             <p style="text-align: left;">
