--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
                         <img src="https://via.placeholder.com/949x316?text=_" alt="picture of Holli">
                     </picture> -->
-                    <img src="Tobias_Paal_Holli-01-24-2022 10.jpg" alt="Bild von Holli">
+                    <img src="holli.jpg" alt="Bild von Holli">
                 </div>
                 <div>
                     <h1>Holli</h1>
