remove some unused code

--- a/index.html
+++ b/index.html
@@ -28,19 +28,12 @@
         <section>
             <div class="header-container">
                 <div>
-                    <!-- <picture>
-                        <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
-                        <source srcset="https://via.placeholder.com/949x316?text=_" type="image/jpeg">
-                        <img src="https://via.placeholder.com/949x316?text=_" alt="picture of Holli">
-                    </picture> -->
                     <img src="holli.jpg" alt="Bild von Holli">
                 </div>
                 <div>
                     <h1>Holli</h1>
                 </div>
             </div>
-            <!-- <img style="width: 100%" src="Tobias_Paal_Holli-01-24-2022 8.jpg"> -->
-            <!-- <div id="separator-symbol">•</div> -->
         </section>
         <section id="bio">
             <p>
@@ -79,7 +72,7 @@
                 <div></div>
             </div>
             <div class="spotify">
-                <iframe style="height: 300px" src="https://open.spotify.com/embed/artist/0mWMTIEvUdaNLWqfXg4Q7E?utm_source=generator&theme=0" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe style="height: 300px" title="Holli - Spotify Profile" src="https://open.spotify.com/embed/artist/0mWMTIEvUdaNLWqfXg4Q7E?utm_source=generator&theme=0" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </section>
         <section id="video">
