--- a/index.html
+++ b/index.html
@@ -21,48 +21,26 @@
         <a href="#bio" onclick="mobileClick()">Über Holli</a>
         <a href="#releases" onclick="mobileClick()">Releases</a>
         <a href="#video" onclick="mobileClick()">Videos</a>
-        <a href="#presskit" onclick="mobileClick()">Pressekit</a>
         <a href="#contact" onclick="mobileClick()">Kontakt</a>
     </nav>
     <main>
         <section>
-            <div class="header-container">
-                <div>
-                    <img src="holli.jpg" alt="Bild von Holli">
-                </div>
                 <div>
                     <h1>Holli</h1>
+                </div>
+            <div class="header-container">
+                <div>
+                    <img src="_MG_2494(c)Michael Schulte Kopie.jpg" alt="Bild von Holli">
                 </div>
             </div>
         </section>
         <section id="bio">
             <p>
-                Wenn Holli <q>Ich bin auch nicht wirklich bekannt dafür,
-                nicht awkward zu sein</q> (Gin mit Leitung) singt,
-                dann tut er sich eigentlich unrecht.
-                Holli, der mit bürgerlichem Namen Tobias heißt,
-                in seiner Zivildienstzeit in einem Seniorenheim
-                aber aufgrund seines vermeintlich holländischen Aussehens
-                den Spitznamen Holli verpasst bekam, ist nicht wirklich awkward.
-                Er hat bloß keine Angst vor der emotionalen Blöße,
-                singt über sich selbst, über Dinge, Probleme, Zustände,
-                die andere vielleicht lieber mit ironischer Distanz kaschieren.
+Holli hat keine Angst vor der emotionalen Blöße, singt über sich selbst, über Dinge, Probleme, Zustände, die andere vielleicht lieber mit ironischer Distanz kaschieren. Die Texte des Künstlers handeln von den großen Themen des Lebens, die derart nackt präsentiert werden, dass die Songs beinahe Tagebuchcharakter annehmen, wobei auf aufdringliche Weisheiten oder kategorische Tristesse verzichtet wird und stets die Hoffnung bestehen bleibt. Der ruhige Singer-Songwriter Charakter Hollis Musik trifft in seinen Liedern mitunter auf Gitarren-Noise, wuchtige Bläsern und dichte Synthklänge. 
             </p>
             <div id="separator-symbol">•</div>
             <p>
-                Der gebürtige Linzer schreibt frisch von der Seele, spart mit Metaphern,
-                ist sich aber nicht zu cool für ein bisschen Pathos.
-                Wenn er also <q>Ich weiß, dass die Liebe siegen wird</q> (Die Liebe wird siegen) singt,
-                dann meint er das auch so. Das erleichtert, worum es Holli eigentlich geht:
-                sich vom Publikum verstanden fühlen und umgekehrt.
-                Dabei ist er nicht alleine, hat eine Band um sich geschart:
-                Michael Furtlehner (Schlagzeug), Thorsten Kaiser (Bass),
-                Michael Reitinger (E-Gitarre), Mara Lutz (Violine),
-                Dorian Windegger (Keys) und dazu je nach Song diverse Gastmusiker*innen.
-                Das klingt dann ein bisschen wie wenn Element of Crime auf Phoebe Bridgers treffen
-                mit etwas Bon Iver in den folkigeren Momenten.
-                Hollis Stimme spielt dabei die ganze Palette emotionaler Befindlichkeiten
-                ohne Rücksicht auf sich selbst, nicht awkward, sondern mutig.
+Holli veröffentlichte sein Debutalbum “Der erste gute Tag” 2023. Im November 2024 erschien die Akustik-EP “Krötenmetamorphose”. Nun ist ein zweites Studioalbum in Planung. 
             </p>
         </section>
 
@@ -81,27 +59,17 @@
                 <div></div>
             </div>
             <div class="video">
-                <iframe  src="https://www.youtube.com/embed/RMkSMlqKeIM?si=UsllwWvSwISJvuW2" title="Holli - Live Session" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe  src="https://www.youtube.com/embed/Xg_xcZtPkD0?si=YzNaC3h5C4-LhoFj" title="Holli - Ein bisschen Zeit" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe  src="https://www.youtube.com/embed/O12I7MLWVhI?si=P3bt8RK_0RoElGb2" title="Holli & sanna - Keine Festung" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/GaxrC9EHgYI" title="Holli - Die Liebe wird siegen / Morgen wird der Schmerz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="video">
-                <iframe src="https://www.youtube.com/embed/HzAeLVxKQsY" title="Holli - Leopoldstadt" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src=https://www.youtube.com/embed/RMkSMlqKeIM?si=kDWRx2I9eTex63dG" title="Holli - Fiakka Sessions" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/CQln5bgKRHM" title="Holli - Immer mehr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </section>
-
-        <section id="presskit">
-            <div class="h2-container">
-                <h2>Pressekit</h2>
-                <div></div>
-            </div>
-            <p style="text-align: left;">
-                Coming Soon.
-            </p>
         </section>
 
         <section id="contact">
@@ -110,8 +78,8 @@
                 <div></div>
             </div>
             <p style="text-align: left;">
-                Für Booking, wenden Sie sich an <a href="mailto:holli.booking@gmail.com">holli.booking@gmail.com</a>.
-                Für andere Anliegen an <a href="contactholli@gmail.com">contactholli@gmail.com</a>.
+                Für Booking und andere Anliegen, wenden Sie sich an
+                <a href="contactholli@gmail.com">contactholli@gmail.com</a>.
             </p>
         </section>
 
