--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             <div class="header-container">
                 <div>
-                    <img src="_MG_2494(c)Michael Schulte Kopie.jpg" alt="Bild von Holli">
+                    <img src="holli.jpg" alt="Bild von Holli">
                 </div>
             </div>
         </section>
