--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Artist Page for XING">
+    <meta name="description" content="Artist Page for Holli">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XING</title>
+    <title>Holli</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
